<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment2"
        android:orientation="vertical">
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@android:color/holo_green_dark">

            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:paddingLeft="20dp">


                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ligne_text"
                        android:textColor="#FFEBEE"
                        android:textSize="23dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bus_route"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@android:color/black"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        tools:text="C1 line " />

                </LinearLayout>



                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direction_text"
                        android:textColor="#FFEBEE"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bus_direction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@android:color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        tools:text="C1 direction" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center"
                android:text="@string/select_stop_text"
                android:textColor="#455A64"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="2dp">

            <ListView android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22dp"
                android:gravity="center" />
        </LinearLayout>

</LinearLayout>