<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Fragment1">


        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/select_date_time"
                android:textSize="22dp"
                android:textStyle="bold" />

        </LinearLayout>




        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <EditText
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:background="#d4d4d4"
                android:hint=""
                android:padding="5dp"
                android:textColor="#897"
                android:textColorHint="#090"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <EditText
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:background="#d4d4d4"
                android:hint=""
                android:padding="5dp"
                android:textColor="#897"
                android:textColorHint="#090"
                android:textSize="23sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>





        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/select_busroute"
                    android:textSize="23dp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:background="#d4d4d4"
                >

                <Spinner android:id="@+id/spinner_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:spinnerMode="dialog">
                </Spinner>
            </LinearLayout>



            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/select_ligne"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="22dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="22dp"
                        android:layout_marginRight="20dp"
                        android:textStyle="bold"
                        android:gravity="center" />

                    <TextView android:id="@+id/line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" ------"
                        android:textSize="28dp"
                        android:textColor="@android:color/holo_red_dark"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>




        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/select_direct"
                    android:textSize="23dp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="#d4d4d4">

                <Spinner android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_direction"
                    android:paddingHorizontal="5dp"
                    android:spinnerMode="dialog">
                </Spinner>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:paddingTop="30dp"
            android:paddingHorizontal="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_dark"
                android:gravity="center"
                android:text="@string/next_text"
                android:textColor="@android:color/white"
                android:textSize="25dp" />

        </LinearLayout>




    </LinearLayout>